--- a/konular.html
+++ b/konular.html
@@ -30,13 +30,10 @@
                 <h3><a href="#">Örnek Konu Başlığı 1</a></h3>
                 <p>Bu konunun kısa bir özeti veya açıklaması burada yer alacak.</p>
             </div>
-            <div class="list-item">
-                <h3><a href="#">Örnek Konu Başlığı 2</a></h3>
-                <p>Bu konunun kısa bir özeti veya açıklaması burada yer alacak.</p>
-            </div>
-            <div class="alert-info">
-                <p>Yeni konu anlatımları yakında eklenecektir...</p>
-            </div>
+<div class="list-item">
+    <h3><a href="konular/anayasa-hukuku.html">Anayasa Hukukuna Giriş</a></h3>
+    <p>Anayasa kavramı, anayasacılık hareketleri ve anayasa türleri hakkında temel bilgiler.</p>
+</div>
         </section>
     </main>
 
