--- a/alan-konulari/yazi-isleri-muduru/04-uyap.html
+++ b/alan-konulari/yazi-isleri-muduru/04-uyap.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Index</title>
+  <title>04 Uyap</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <header>
-    <h1>Index</h1>
+    <h1>04 Uyap</h1>
   </header>
   <main>
-    <p>Bu sayfa, Index için oluşturulmuştur.</p>
+    <p>Bu sayfa, 04 Uyap için oluşturulmuştur.</p>
   </main>
 </body>
 </html>
