--- a/alan-konulari/yazi-isleri-muduru/06-tebligat-hukuku.html
+++ b/alan-konulari/yazi-isleri-muduru/06-tebligat-hukuku.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Index</title>
+  <title>06 Tebligat Hukuku</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <header>
-    <h1>Index</h1>
+    <h1>06 Tebligat Hukuku</h1>
   </header>
   <main>
-    <p>Bu sayfa, Index için oluşturulmuştur.</p>
+    <p>Bu sayfa, 06 Tebligat Hukuku için oluşturulmuştur.</p>
   </main>
 </body>
 </html>
