--- a/ortak-konular/06-halkla-iliskiler.html
+++ b/ortak-konular/06-halkla-iliskiler.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Index</title>
+  <title>06 Halkla Iliskiler</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <header>
-    <h1>Index</h1>
+    <h1>06 Halkla Iliskiler</h1>
   </header>
   <main>
-    <p>Bu sayfa, Index için oluşturulmuştur.</p>
+    <p>Bu sayfa, 06 Halkla Iliskiler için oluşturulmuştur.</p>
   </main>
 </body>
 </html>
