--- a/ortak-konular/07-etik-davranis.html
+++ b/ortak-konular/07-etik-davranis.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Index</title>
+  <title>07 Etik Davranis</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <header>
-    <h1>Index</h1>
+    <h1>07 Etik Davranis</h1>
   </header>
   <main>
-    <p>Bu sayfa, Index için oluşturulmuştur.</p>
+    <p>Bu sayfa, 07 Etik Davranis için oluşturulmuştur.</p>
   </main>
 </body>
 </html>
