--- a/index.html
+++ b/index.html
@@ -1,17 +1,60 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Index</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Adalet GYS Portalı - Ana Sayfa</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <header>
-    <h1>Index</h1>
-  </header>
-  <main>
-    <p>Bu sayfa, Index için oluşturulmuştur.</p>
-  </main>
+    <header class="navbar">
+        <div class="container">
+            <a href="index.html" class="navbar-brand">
+                Adalet GYS Portalı
+            </a>
+            <nav class="navbar-nav">
+                <a href="index.html" class="nav-link active">Ana Sayfa</a>
+                <a href="hakkinda.html" class="nav-link">Hakkında</a>
+                <a href="iletisim.html" class="nav-link">İletişim</a>
+            </nav>
+        </div>
+    </header>
+
+    <main class="container page-content">
+        <section class="hero">
+            <h1>Görevde Yükselme Sınavı Hazırlık Platformu</h1>
+            <p class="subtitle">Yazı İşleri Müdürlüğü ve diğer unvanlar için güncel konu anlatımları, testler ve deneme sınavları ile hedefinize ulaşın.</p>
+        </section>
+
+        <section class="category-grid">
+            <div class="category-card">
+                <h2>📘 Ortak Konular</h2>
+                <p>Tüm unvanlar için zorunlu olan %40'lık bölümün konu anlatımları ve testleri.</p>
+                <a href="#" class="btn">Konuları İncele</a>
+                <a href="#" class="btn btn-secondary">Testleri Çöz</a>
+            </div>
+
+            <div class="category-card">
+                <h2>📙 Alan Konuları</h2>
+                <p>Yazı İşleri Müdürlüğü için özel olarak hazırlanmış %60'lık bölümün içerikleri.</p>
+                <a href="#" class="btn">Konuları İncele</a>
+                <a href="#" class="btn btn-secondary">Testleri Çöz</a>
+            </div>
+
+            <div class="category-card">
+                <h2>⏱️ Deneme Sınavları</h2>
+                <p>Gerçek sınav formatında, süre tutarak kendinizi deneyin ve ilerlemenizi takip edin.</p>
+                <a href="#" class="btn">Denemelere Başla</a>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2025 Adalet GYS Portalı. Tüm hakları saklıdır.</p>
+        </div>
+    </footer>
+
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
