--- a/ortak-konular/01-tc-anayasasi.html
+++ b/ortak-konular/01-tc-anayasasi.html
@@ -1,17 +1,62 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>01 Tc Anayasasi</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>T.C. Anayasası - Adalet GYS Portalı</title>
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/konu-anlatim.css">
 </head>
 <body>
-  <header>
-    <h1>01 Tc Anayasasi</h1>
-  </header>
-  <main>
-    <p>Bu sayfa, 01 Tc Anayasasi için oluşturulmuştur.</p>
-  </main>
+    <header class="navbar">
+        <div class="container">
+            <a href="../index.html" class="navbar-brand">Adalet GYS Portalı</a>
+            <nav class="navbar-nav">
+                <a href="../index.html" class="nav-link">Ana Sayfa</a>
+                <a href="../hakkinda.html" class="nav-link">Hakkında</a>
+                <a href="../iletisim.html" class="nav-link">İletişim</a>
+            </nav>
+        </div>
+    </header>
+
+    <main class="container page-content">
+        <article class="article-content">
+            <h1>T.C. Anayasası (Genel Esaslar, Temel Hak ve Ödevler)</h1>
+            <p class="article-meta">Ortak Konular - Ders Notları</p>
+            
+            <hr>
+
+            <h2>1. Genel Esaslar</h2>
+            <p>
+                Türkiye Cumhuriyeti Anayasası'nın ilk maddeleri, devletin şekli, temel nitelikleri, bütünlüğü, resmi dili, bayrağı, milli marşı ve başkenti gibi temel konuları düzenler. Bu maddeler, Anayasa'nın değiştirilemez hükümlerini içerir ve devletin temel felsefesini ortaya koyar.
+            </p>
+            <blockquote>
+                <strong>Madde 2:</strong> Türkiye Cumhuriyeti, toplumun huzuru, millî dayanışma ve adalet anlayışı içinde, insan haklarına saygılı, Atatürk milliyetçiliğine bağlı, başlangıçta belirtilen temel ilkelere dayanan, demokratik, lâik ve sosyal bir hukuk Devletidir.
+            </blockquote>
+
+            <h2>2. Temel Hak ve Ödevler</h2>
+            <p>
+                Anayasa'nın ikinci kısmı, "Temel Haklar ve Ödevler" başlığını taşır. Bu bölümde kişilerin hak ve ödevleri, sosyal ve ekonomik haklar, siyasi haklar gibi kategoriler altında güvence altına alınmıştır. Temel hak ve hürriyetlerin ancak kanunla ve Anayasa'nın belirlediği özel sebeplere dayanarak sınırlanabileceği ilkesi esastır.
+            </p>
+            <ul>
+                <li><strong>Kişinin Hakları ve Ödevleri:</strong> Yaşama hakkı, konut dokunulmazlığı, özel hayatın gizliliği vb.</li>
+                <li><strong>Sosyal ve Ekonomik Haklar:</strong> Eğitim ve öğrenim hakkı, çalışma hakkı, sendika kurma hakkı vb.</li>
+                <li><strong>Siyasi Haklar ve Ödevler:</strong> Türk vatandaşlığı, seçme ve seçilme hakkı, dilekçe hakkı vb.</li>
+            </ul>
+
+            <h2>3. Devletin Temel Organları</h2>
+            <p>
+                Anayasa, devletin temel organları olan Yasama, Yürütme ve Yargı'yı ve bu organlar arasındaki güçler ayrılığı ilkesini düzenler. Yasama yetkisi TBMM'ye, yürütme yetkisi ve görevi Cumhurbaşkanı'na, yargı yetkisi ise bağımsız ve tarafsız mahkemelere aittir.
+            </p>
+        </article>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2025 Adalet GYS Portalı. Tüm hakları saklıdır.</p>
+        </div>
+    </footer>
+
+    <script src="../assets/js/main.js"></script>
 </body>
 </html>
