--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
             <div class="category-card">
                 <h2>📘 Ortak Konular</h2>
                 <p>Tüm unvanlar için zorunlu olan %40'lık bölümün konu anlatımları ve testleri.</p>
-                <a href="#" class="btn">Konuları İncele</a>
-                <a href="#" class="btn btn-secondary">Testleri Çöz</a>
+                <a href="ortak-konular/" class="btn">Konuları İncele</a>
+                <a href="testler/ortak-konular/" class="btn btn-secondary">Testleri Çöz</a>
             </div>
 
             <div class="category-card">
                 <h2>📙 Alan Konuları</h2>
                 <p>Yazı İşleri Müdürlüğü için özel olarak hazırlanmış %60'lık bölümün içerikleri.</p>
-                <a href="#" class="btn">Konuları İncele</a>
-                <a href="#" class="btn btn-secondary">Testleri Çöz</a>
+                 <a href="alan-konulari/" class="btn">Konuları İncele</a>
+                 <a href="testler/alan-konulari/" class="btn btn-secondary">Testleri Çöz</a>
             </div>
 
             <div class="category-card">
                 <h2>⏱️ Deneme Sınavları</h2>
                 <p>Gerçek sınav formatında, süre tutarak kendinizi deneyin ve ilerlemenizi takip edin.</p>
-                <a href="#" class="btn">Denemelere Başla</a>
+                 <a href="deneme-sinavlari/" class="btn">Denemelere Başla</a>
             </div>
         </section>
     </main>
