--- a/deneme-sinavlari/genel-denemeler/deneme-1.html
+++ b/deneme-sinavlari/genel-denemeler/deneme-1.html
@@ -21,8 +21,7 @@
         </div>
     </header>
 
-    <main id="app-container" class="max-w-5xl mx-auto p-4 sm:p-6 lg:p-8">
-        <div id="welcome-screen" class="card p-8 md:p-12 text-center">
+<main id="app-container" data-sheet-url="https://docs.google.com/spreadsheets/d/1TLyIqpuCQTkp2JkEUybY4Xc1Ty9rWSBqJ3aQF4j7OOE/export?format=csv&gid=0" class="max-w-5xl mx-auto p-4 sm:p-6 lg:p-8">        <div id="welcome-screen" class="card p-8 md:p-12 text-center">
             <div class="bg-slate-50 border border-slate-200 rounded-lg p-6 mb-10">
                 <h1 class="text-3xl md:text-4xl font-bold text-slate-800 bg-teal-50 p-2 rounded">Genel Deneme Sınavı - 1</h1>
                 <p class="text-lg md:text-xl text-slate-500 mt-3">Yazı İşleri Müdürlüğü</p>
