--- a/deneme-sinavlari/genel-denemeler/deneme-1.html
+++ b/deneme-sinavlari/genel-denemeler/deneme-1.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/test.css">
     
-    <!-- Sayfaya Özel Stiller (Pasted_Text_1753605102807.txt'ten alınmıştır) -->
+    <!-- Sayfaya Özel Stiller -->
     <style>
         :root {
             --primary-color: #0d9488;
@@ -147,6 +147,10 @@
             background-color: #e2e8f0;
             color: #475569;
             border: 2px solid transparent;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            gap: 0.5rem; /* 8px */
         }
         .tab-btn:hover {
             background-color: #cbd5e1;
@@ -298,10 +302,14 @@
                         <span class="w-3 h-3 rounded-full bg-green-500"></span>Cevaplanmış
                     </div>
                     <div class="flex items-center gap-1.5">
-                        <!-- SVG İkon: Bayrak (Dolu, küçük) -->
+                        <!-- SVG İkon: Bayrak (Dolu, küçük) - İşaretli Sorular -->
                         <svg class="w-4 h-4 text-yellow-400" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd"></path>
                         </svg>İşaretli
+                    </div>
+                    <!-- EKLENDİ: Boş Sorular için açıklama -->
+                    <div class="flex items-center gap-1.5">
+                        <span class="w-3 h-3 rounded-full bg-slate-300"></span>Boş
                     </div>
                 </div>
                 <!-- Soru Kutucukları -->
@@ -344,8 +352,22 @@
 
                 <!-- Sonuç Sekmeleri -->
                 <div class="flex items-center gap-4 mb-6">
-                    <button class="tab-btn flex-1 tab-active" id="wrong-answers-tab">Yanlış Cevaplar</button>
-                    <button class="tab-btn flex-1" id="marked-questions-tab">İşaretlenen Sorular</button>
+                    <!-- Yanlış Cevaplar Sekmesi - Çarpı İkonu Eklendi -->
+                    <button class="tab-btn flex-1 tab-active" id="wrong-answers-tab">
+                        <!-- SVG İkon: Çarpı (Yuvarlak içine alınmış) -->
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-red-500" viewBox="0 0 20 20" fill="currentColor">
+                            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
+                        </svg>
+                        <span>Yanlış Cevaplar</span>
+                    </button>
+                    <!-- İşaretlenen Sorular Sekmesi - Bayrak İkonu Eklendi -->
+                    <button class="tab-btn flex-1" id="marked-questions-tab">
+                        <!-- SVG İkon: Bayrak (Dolu, küçük) -->
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-yellow-500" viewBox="0 0 20 20" fill="currentColor">
+                            <path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd"></path>
+                        </svg>
+                        <span>İşaretlenen Sorular</span>
+                    </button>
                 </div>
 
                 <!-- Sonuç Panelleri -->
