--- a/deneme-sinavlari/genel-denemeler/deneme-1.html
+++ b/deneme-sinavlari/genel-denemeler/deneme-1.html
@@ -277,9 +277,11 @@
                     </button>
                 </div>
 
-                <!-- Soru Metni -->
+                              <!-- Soru Metni -->
                 <div class="mt-8 mb-8">
-                    <pre id="question-text"></pre>
+                    <div id="question-text-container">
+                        <pre id="question-text"></pre>
+                    </div>
                 </div>
 
                 <!-- Seçenekler -->
