--- a/deneme-sinavlari/genel-denemeler/deneme-1.html
+++ b/deneme-sinavlari/genel-denemeler/deneme-1.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/test.css">
 </head>
-<body class="text-slate-800">
-
+<body class="text-slate-800" data-needs-template="true">
+    
     <!-- Zamanlayıcı duyurusu için gizli element -->
     <div id="timer-announcer" aria-live="polite" aria-atomic="true"></div>
 
