--- a/iletisim.html
+++ b/iletisim.html
@@ -14,33 +14,17 @@
     <main class="container page-content">
         <div class="card p-8 md:p-12 text-center">
             <h1 class="text-3xl font-bold mb-4">Görüş ve Önerileriniz</h1>
-            <p class="text-lg text-slate-600 max-w-2xl mx-auto">
-                Platformumuzu daha iyi hale getirmemize yardımcı olduğunuz için teşekkür ederiz. Her türlü geri bildirim, soru veya öneri bizim için değerlidir.
-            </p>
-            
+            <p class="text-lg text-slate-600 max-w-2xl mx-auto">Platformumuzu daha iyi hale getirmemize yardımcı olduğunuz için teşekkür ederiz. Her türlü geri bildirim, soru veya öneri bizim için değerlidir.</p>
             <div class="mt-12 grid md:grid-cols-2 gap-8 text-left">
                 <div class="bg-slate-50 p-6 rounded-lg border">
-                    <h3 class="text-xl font-semibold text-slate-800 mb-3">
-                        Geri Bildirim ve Destek
-                    </h3>
-                    <p class="text-slate-600 mb-4">
-                        İçeriklerle ilgili sorularınız, önerileriniz veya platformla ilgili genel geri bildirimleriniz için bize e-posta yoluyla ulaşabilirsiniz.
-                    </p>
-                    <a href="mailto:destek@adalet-gys-portal.com?subject=GYS Portalı Geri Bildirim" class="font-medium text-teal-600 hover:text-teal-700">
-                        destek@adalet-gys-portal.com
-                    </a>
+                    <h3 class="text-xl font-semibold text-slate-800 mb-3">Geri Bildirim ve Destek</h3>
+                    <p class="text-slate-600 mb-4">İçeriklerle ilgili sorularınız, önerileriniz veya platformla ilgili genel geri bildirimleriniz için bize e-posta yoluyla ulaşabilirsiniz.</p>
+                    <a href="mailto:destek@adalet-gys-portal.com?subject=GYS Portalı Geri Bildirim" class="font-medium text-teal-600 hover:text-teal-700">destek@adalet-gys-portal.com</a>
                 </div>
-                
                 <div class="bg-slate-50 p-6 rounded-lg border">
-                    <h3 class="text-xl font-semibold text-slate-800 mb-3">
-                        Teknik Hata Bildirimi
-                    </h3>
-                    <p class="text-slate-600 mb-4">
-                        Platformda karşılaştığınız teknik bir hatayı (örneğin bozuk bir link, çalışmayan bir buton) bildirmek isterseniz, projenin GitHub sayfasına bir "Issue" açabilirsiniz.
-                    </p>
-                    <a href="https://github.com/GoldRoger21/adalet-gys-portal/issues" target="_blank" class="font-medium text-teal-600 hover:text-teal-700">
-                        GitHub'da Hata Bildir →
-                    </a>
+                    <h3 class="text-xl font-semibold text-slate-800 mb-3">Teknik Hata Bildirimi</h3>
+                    <p class="text-slate-600 mb-4">Platformda karşılaştığınız teknik bir hatayı (örneğin bozuk bir link, çalışmayan bir buton) bildirmek isterseniz, projenin GitHub sayfasına bir "Issue" açabilirsiniz.</p>
+                    <a href="https://github.com/GoldRoger21/adalet-gys-portal/issues" target="_blank" class="font-medium text-teal-600 hover:text-teal-700">GitHub'da Hata Bildir →</a>
                 </div>
             </div>
         </div>
