--- a/iletisim.html
+++ b/iletisim.html
@@ -10,8 +10,7 @@
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
 
-<body data-needs-template="true">
-
+<body data-needs-template="exam">
     <main class="container page-content">
         <div class="card p-8 md:p-12 text-center">
             <h1 class="text-3xl font-bold mb-4">Görüş ve Önerileriniz</h1>
