--- a/deneme-sinavlari/genel-denemeler/deneme-1.html
+++ b/deneme-sinavlari/genel-denemeler/deneme-1.html
@@ -4,40 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adalet Bakanlığı GYS - Deneme Sınavı</title>
-
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/test.css">
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
     <script src="/adalet-gys-portal/assets/js/test-engine.js" defer></script>
 </head>
-
 <body data-needs-template="exam">
-
-    <main id="app-container" 
-        data-sheet-url="https://docs.google.com/spreadsheets/d/1TLyIqpuCQTkp2JkEUybY4Xc1Ty9rWSBqJ3aQF4j7OOE/export?format=csv&gid=0" 
-        data-exam-duration="120">
-        
+    <main id="app-container" data-sheet-url="https://docs.google.com/spreadsheets/d/1TLyIqpuCQTkp2JkEUybY4Xc1Ty9rWSBqJ3aQF4j7OOE/export?format=csv&gid=0" data-exam-duration="120">
         <div id="welcome-screen" class="card p-8 md:p-12 text-center">
             <div class="bg-slate-50 border border-slate-200 rounded-lg p-6 mb-10">
-                <h1 class="text-3xl md:text-4xl font-bold text-slate-800 bg-teal-50 p-2 rounded">Adalet Bakanlığı Görevde Yükselme Sınavı</h1>
-                <p class="text-lg md:text-xl text-slate-500 mt-3">Yazı İşleri Müdürlüğü Deneme Sınavı</p>
-            </div>
-            <div id="warning-box" class="hidden text-left mb-6 p-4 bg-yellow-50 border-l-4 border-yellow-500 rounded-md">
-                <h3 class="font-bold text-yellow-800">Uyarı</h3>
-                <p class="text-yellow-700 mt-2" id="warning-message"></p>
+                [cite_start]<h1 class="text-3xl font-bold">Adalet Bakanlığı Görevde Yükselme Sınavı</h1> [cite: 2]
+                [cite_start]<p class="text-lg mt-3">Yazı İşleri Müdürlüğü Deneme Sınavı</p> [cite: 3]
             </div>
             <div class="text-left grid md:grid-cols-2 gap-8 mt-12 mb-10">
                 <div class="bg-slate-50 p-6 rounded-lg border">
-                    <h2 class="text-xl font-semibold text-slate-800 border-b pb-3 mb-4">Sınav Bilgileri</h2>
-                    <ul class="space-y-3 text-slate-700">
-                        <li><b>Toplam Süre:</b><span id="total-duration-display"> Hesaplanıyor...</span></li>
-                        <li><b>Toplam Soru Sayısı:</b> <span id="total-question-count">0</span> Soru</li>
+                    [cite_start]<h2 class="text-xl font-semibold border-b pb-3 mb-4">Sınav Bilgileri</h2> [cite: 5]
+                    <ul class="space-y-3">
+                        [cite_start]<li><b>Toplam Süre:</b><span id="total-duration-display"> 120 Dakika</span></li> [cite: 6]
+                        [cite_start]<li><b>Toplam Soru Sayısı:</b> <span id="total-question-count">100</span> Soru</li> [cite: 7]
                     </ul>
                 </div>
                 <div class="bg-slate-50 p-6 rounded-lg border">
-                    <h2 class="text-xl font-semibold text-slate-800 border-b pb-3 mb-4">Kullanım Kılavuzu</h2>
-                    <ul class="space-y-3 text-slate-700">
-                        <li>...Kullanım kılavuzu maddeleri buraya...</li>
+                    [cite_start]<h2 class="text-xl font-semibold border-b pb-3 mb-4">Kullanım Kılavuzu</h2> [cite: 8]
+                    <ul class="space-y-3">
+                         [cite_start]<li>...Kullanım kılavuzu maddeleri buraya...</li> [cite: 9]
                     </ul>
                 </div>
             </div>
@@ -45,32 +35,8 @@
                 <span id="start-btn-full-text">Sorular Yükleniyor...</span>
             </button>
         </div>
-
         <div id="quiz-screen" class="hidden">
-            <div class="card p-6 relative">
-                <div class="flex justify-between items-center mb-6 bg-slate-50 -m-6 p-6 pb-4 rounded-t-lg border-b">
-                    <span id="question-counter" class="text-lg font-bold text-teal-500"></span>
-                    <div class="flex items-center space-x-4">
-                        <div><span class="text-xs">GEÇEN SÜRE</span><div id="elapsed-time">00:00:00</div></div>
-                        <div><span class="text-xs">KALAN SÜRE</span><div id="remaining-time">00:00:00</div></div>
-                    </div>
-                    <button id="mark-review-btn" title="İncelemek için işaretle"><span id="flag-outline-icon">FLAG</span><span id="flag-solid-icon" class="hidden">SOLIDFLAG</span></button>
-                </div>
-                <div class="mt-8 mb-8"><pre id="question-text"></pre></div>
-                <div id="options-container" class="grid grid-cols-1 gap-4"></div>
             </div>
-            <div class="flex justify-between items-center mt-6">
-                <button id="prev-btn">Önceki</button>
-                <button id="finish-btn" class="px-6 py-2 bg-red-600 text-white rounded-md">Sınavı Bitir</button>
-                <button id="next-btn">Sonraki</button>
-            </div>
-            <div class="card p-4 mt-6">
-                <h3 class="text-lg font-semibold mb-3">Soru Gezgini</h3>
-                <div id="nav-palette-container" class="grid grid-cols-10 gap-2"></div>
-            </div>
-        </div>
-
     </main>
-
 </body>
 </html>
