--- a/_templates/sinav-sablonu.html
+++ b/_templates/sinav-sablonu.html
@@ -22,7 +22,8 @@
 
     <!-- Main Container (template-loader tarafından deneme-1.html'deki #app-container ile değiştirilecek) -->
     <!-- Bu elementin ID'si template-loader'da özel olarak aranıyor -->
-    <main id="app-container">
+    <!-- DÜZELTME: Sınırlayıcı stiller eklendi -->
+    <main id="app-container" class="container page-content">
         <!-- Zamanlayıcı duyurusu için gizli element -->
         <div id="timer-announcer" aria-live="polite" aria-atomic="true"></div>
 
