--- a/_templates/sinav-sablonu.html
+++ b/_templates/sinav-sablonu.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sınav Şablonu</title>
-    <!-- Bu dosya template-loader tarafından yüklenir, bu nedenle sadece body içeriğini içerir -->
-    <!-- Stil ve script bağlantıları deneme-1.html'de zaten tanımlı -->
 </head>
 <body>
-    <!-- Header (template-loader tarafından body'nin başına eklenecek) -->
     <header class="navbar">
         <div class="container">
             <a href="/adalet-gys-portal/index.html" class="navbar-brand">Adalet GYS Portalı</a>
@@ -20,15 +17,9 @@
         </div>
     </header>
 
-    <!-- Main Container (template-loader tarafından deneme-1.html'deki #app-container ile değiştirilecek) -->
-    <!-- Bu elementin ID'si template-loader'da özel olarak aranıyor -->
-    <!-- Tema ile uyumlu: Genel site stilini (container, page-content) miras alır -->
     <main id="app-container" class="container page-content">
-        <!-- Zamanlayıcı duyurusu için gizli element -->
         <div id="timer-announcer" aria-live="polite" aria-atomic="true"></div>
 
-        <!-- HOŞGELDİN EKRANI -->
-        <!-- Tema ile uyumlu: İçerik .container içinde kalır, sınırlar .card'a bırakılır -->
         <div id="welcome-screen" class="w-full">
             <div class="card p-8 md:p-12 text-center">
                 <div class="bg-slate-50 border border-slate-200 rounded-lg p-6 mb-10">
@@ -36,13 +27,11 @@
                     <p class="text-lg md:text-xl text-slate-500 mt-3" id="exam-subtitle">Deneme Sınavı</p>
                 </div>
 
-                <!-- Uyarı kutusu (hata durumunda gösterilir) -->
                 <div id="warning-box" class="hidden text-left mb-6 p-4 bg-yellow-50 border-l-4 border-yellow-500 rounded-md">
                     <h3 class="font-bold text-yellow-800">Uyarı</h3>
                     <p class="text-yellow-700 mt-2" id="warning-message"></p>
                 </div>
 
-                <!-- Sınav Bilgileri ve Kullanım Kılavuzu -->
                 <div class="text-left grid md:grid-cols-2 gap-8 mt-12 mb-10">
                     <div class="bg-slate-50 p-6 rounded-lg border">
                         <h2 class="text-xl font-semibold text-slate-800 border-b pb-3 mb-4">Sınav Bilgileri</h2>
@@ -68,15 +57,13 @@
                             </li>
                             <li class="flex items-start">
                                 <span class="mr-3 text-teal-500">✓</span>
-                                <p class="text-justify"><b>Raporlama:</b> Sınav bitiminde, performans özetinizi, yanlış cevaplarınızı ve işaretlediğiniz soruları içeren bir analiz sayfası sizi karşılayacaktır.</p> <!-- Açıklama metni güncellendi -->
+                                <p class="text-justify"><b>Raporlama:</b> Sınav bitiminde, performans özetinizi, yanlış cevaplarınızı ve işaretlediğiniz soruları içeren bir analiz sayfası sizi karşılayacaktır.</p>
                             </li>
                         </ul>
                     </div>
                 </div>
 
-                <!-- Sınavı Başlat Butonu -->
                 <button id="start-exam-btn" class="start-btn w-full md:w-auto inline-flex items-center justify-center text-white font-bold text-lg px-12 py-4 rounded-lg" disabled>
-                    <!-- SVG İkon: Play -->
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z" />
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
@@ -86,11 +73,8 @@
             </div>
         </div>
 
-        <!-- SORU EKRANI -->
-        <!-- Tema ile uyumlu: İçerik .container içinde kalır, sınırlar .card'a bırakılır -->
         <div id="quiz-screen" class="hidden w-full">
             <div class="card p-6 relative">
-                <!-- Üst Bilgi Çubuğu (Soru numarası, zamanlayıcı, işaretleme) -->
                 <div class="flex justify-between items-center mb-6 bg-slate-50 -m-6 p-6 pb-4 rounded-t-lg border-b">
                     <span id="question-counter" class="text-lg font-bold text-teal-500"></span>
                     <div class="flex items-center space-x-4 sm:space-x-6 text-center">
@@ -104,68 +88,54 @@
                             <div id="remaining-time" class="text-xl font-bold text-teal-600">00:00:00</div>
                         </div>
                     </div>
-                    <!-- Soruyu İşaretleme Butonu (Bayrak İkonu) -->
                     <button id="mark-review-btn" title="İncelemek için işaretle" class="flag-icon text-slate-400 hover:text-yellow-500" aria-label="Soruyu işaretle">
-                        <!-- SVG İkon: Bayrak (Çizgili) -->
                         <svg id="flag-outline-icon" xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6H8.5l-1-1H5a2 2 0 00-2 2z" />
                         </svg>
-                        <!-- SVG İkon: Bayrak (Dolu) -->
                         <svg id="flag-solid-icon" xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 hidden" viewBox="0 0 20 20" fill="currentColor">
                             <path d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" />
                         </svg>
                     </button>
                 </div>
 
-                <!-- Soru Metni -->
                 <div class="mt-8 mb-8">
                     <div id="question-text-container">
                         <pre id="question-text"></pre>
                     </div>
                 </div>
 
-                <!-- Seçenekler -->
                 <div id="options-container" class="grid grid-cols-1 gap-4"></div>
             </div>
 
-            <!-- Gezinti Butonları -->
             <div class="flex justify-between items-center mt-6">
                 <button id="prev-btn" class="px-6 py-2 bg-white rounded-md hover:bg-slate-50 shadow-sm disabled:opacity-50" aria-label="Önceki soru">Önceki</button>
                 <button id="finish-btn" class="px-6 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 shadow-sm" aria-label="Sınavı bitir">Sınavı Bitir</button>
                 <button id="next-btn" class="px-6 py-2 bg-teal-600 text-white rounded-md hover:bg-teal-700 shadow-sm disabled:opacity-50" aria-label="Sonraki soru">Sonraki</button>
             </div>
 
-            <!-- Soru Gezgini -->
             <div class="card p-4 mt-6">
                 <h3 class="text-lg font-semibold mb-3">Soru Gezgini</h3>
-                <!-- Soru Gezgini Açıklaması -->
                 <div class="flex flex-wrap items-center gap-x-4 gap-y-2 text-xs text-slate-500 mb-4 pb-2 border-b">
                     <div class="flex items-center gap-1.5">
                         <span class="w-3 h-3 rounded-full bg-green-500"></span>Cevaplanmış
                     </div>
                     <div class="flex items-center gap-1.5">
-                        <!-- SVG İkon: Bayrak (Dolu, küçük) - İşaretli Sorular -->
                         <svg class="w-4 h-4 text-yellow-400" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd"></path>
                         </svg>İşaretli
                     </div>
-                    <!-- EKLENDİ: Boş Sorular için açıklama -->
                     <div class="flex items-center gap-1.5">
                         <span class="w-3 h-3 rounded-full bg-slate-300"></span>Boş
                     </div>
                 </div>
-                <!-- Soru Kutucukları -->
                 <div id="nav-palette-container" class="grid grid-cols-8 sm:grid-cols-10 md:grid-cols-15 lg:grid-cols-20 gap-2"></div>
             </div>
         </div>
 
-        <!-- SONUÇ EKRANI (Modal yerine normal ekran) -->
-        <!-- Tema ile uyumlu: İçerik .container içinde kalır, sınırlar .card'a bırakılır -->
         <div id="result-screen" class="hidden w-full">
             <div class="card p-6 md:p-8">
                 <h2 id="result-title" class="text-3xl font-bold text-center mb-6">Sınav Sonucu</h2>
                 <div id="performance-summary" class="text-center text-lg text-slate-700 mb-8"></div>
-                <!-- İstatistikler -->
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-center mb-10">
                     <div class="p-4 bg-green-100 rounded-lg">
                         <p class="text-2xl font-bold" id="correct-count">0</p>
@@ -184,33 +154,26 @@
                         <p id="success-text">Başarı</p>
                     </div>
                 </div>
-                <!-- Sonuç Sekmeleri -->
                 <div class="flex flex-wrap items-center gap-4 mb-6">
-                    <!-- Yanlış Cevaplar Sekmesi - Çarpı İkonu Eklendi -->
                     <button class="tab-btn flex-1 tab-active" id="wrong-answers-tab">
-                        <!-- SVG İkon: Çarpı (Yuvarlak içine alınmış) -->
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-red-500" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
                         </svg>
                         <span>Yanlış Cevaplar</span>
                     </button>
-                    <!-- İşaretlenen Sorular Sekmesi - Bayrak İkonu Eklendi -->
                     <button class="tab-btn flex-1" id="marked-questions-tab">
-                        <!-- SVG İkon: Bayrak (Dolu, küçük) -->
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-yellow-500" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd"></path>
                         </svg>
                         <span>İşaretlenen Sorular</span>
                     </button>
                 </div>
-                <!-- Sonuç Panelleri -->
                 <div id="wrong-answers-panel">
                     <div id="wrong-answers-container" aria-live="polite"></div>
                 </div>
                 <div id="marked-questions-panel" class="hidden">
                     <div id="marked-questions-container" aria-live="polite"></div>
                 </div>
-                <!-- Tekrar Dene Butonu -->
                 <div class="text-center mt-12">
                     <button id="restart-btn" class="start-btn text-white font-bold px-8 py-3 rounded-lg">Yeni Sınav Başlat</button>
                 </div>
@@ -219,21 +182,24 @@
 
     </main>
 
-    <!-- Footer (template-loader tarafından body'nin sonuna eklenecek) -->
     <footer class="footer">
         <div class="container">
             <p>&copy; 2025 Adalet GYS Portalı. Tüm hakları saklıdır.</p>
         </div>
     </footer>
 
-    <!-- ESKİ MODAL (Artık kullanılmıyor, yorumlandı) -->
-    <!--
-    <div id="result-modal" class="hidden fixed inset-0 bg-slate-100 z-40 overflow-y-auto p-6 sm:p-12">
-        ...
-    </div>
     <div id="alert-modal" class="fixed inset-0 bg-slate-900 bg-opacity-75 hidden items-center justify-center p-4 z-50">
-        ...
+        <div class="card p-8 max-w-sm mx-auto text-center">
+            <div class="mx-auto flex items-center justify-center h-12 w-12 rounded-full bg-yellow-100 mb-4">
+                <svg class="h-6 w-6 text-yellow-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+                </svg>
+            </div>
+            <h3 class="text-xl font-bold text-slate-900 mb-4" id="alert-modal-title">UYARI</h3>
+            <p class="text-slate-600 mb-8" id="alert-modal-message"></p>
+            <button id="alert-modal-ok-btn" class="px-8 py-2 bg-yellow-500 text-white rounded-md hover:bg-yellow-600">Tamam</button>
+        </div>
     </div>
-    -->
+
 </body>
 </html>
